# ot-harjoitustyo

./: .pylintrc  README.md  pyproject.toml  tasks.py
documentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: ratkaisut.md
src/: index.py
src/logic/: __init__.py  arrow.py  polygon.py  tile.py
src/tests/: test_polygon.py  test_tile.py
